Restrict generational mode to adaptive heuristic
Reviewed-by: shade